--- a/packages/discord-client/tsconfig.json
+++ b/packages/discord-client/tsconfig.json
@@ -3,10 +3,7 @@
     "compilerOptions": {
         "rootDir": "src",
         "outDir": "dist",
-        "baseUrl": ".",
-        "types": [
-            "@infinite-fansub/logger/globals"
-        ]
+        "baseUrl": "."
     },
     "typedocOptions": {
         "entryPoints": [
