--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
           npm i
           npm i -ws
       - name: Lint
-        run: npm run eslint
+        run: npm run lint
   build:
     needs: lint
     name: Build application on ${{ matrix.os }}
