--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   },
   "homepage": "https://github.com/Infinite-Fansub/infinite#readme",
   "scripts": {
-    "eslint": "eslint \"packages/**\"",
-    "eslint:fix": "eslint \"packages/**\" --fix"
+    "lint": "eslint \"packages/**/*.ts\"",
+    "lint:fix": "eslint \"packages/**/.ts\" --fix"
   },
   "devDependencies": {
     "@types/node": "^18.7.15",
