--- a/packages/discord-client/package.json
+++ b/packages/discord-client/package.json
@@ -7,7 +7,7 @@
     "main": "dist/index.js",
     "types": "dist",
     "scripts": {
-        "test": "ts-node tests/index.ts",
+        "test": "echo No Test here",
         "lint": "eslint src/**/*.ts",
         "lint:fix": "eslint src/**/*.ts --fix",
         "docs": "rm -rf docs && typedoc && typedoc --plugin typedoc-plugin-coverage --plugin typedoc-plugin-markdown",
